--- a/package.json
+++ b/package.json
@@ -32,10 +32,14 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@types/react": "^17.0.34",
+    "css-loader": "^6.7.1",
     "rollup": "^2.60.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1"
   },
   "peerDependencies": {
     "react": "^17.0.2",
